<resources>
    <string name="app_name">IndividualProject3</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="kid_account">Kid Account</string>
    <string name="parent_account">Parent Account</string>
</resources>