<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        app:layout_constraintStart_toStartOf="@id/editTextUsername"
        app:layout_constraintEnd_toEndOf="@id/editTextUsername"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="@id/editTextEmail"
        app:layout_constraintEnd_toEndOf="@id/editTextEmail"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupAccountType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toStartOf="@id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@id/editTextPassword"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioButtonKid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kid_account" />

        <RadioButton
            android:id="@+id/radioButtonParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/parent_account" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/radioGroupAccountType"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/radioGroupAccountType"
        app:layout_constraintTop_toBottomOf="@id/radioGroupAccountType" />

</androidx.constraintlayout.widget.ConstraintLayout>
